--- a/styles/style.css
+++ b/styles/style.css
@@ -314,7 +314,7 @@ a:hover {
 .online-card-image.card-bg::after {
     content: '';
     clear: both;
-    position: absolute;
+    position: absolute;s
     top: 4px;
     left: 50%;
     width: 334px;
@@ -325,4 +325,333 @@ a:hover {
     opacity: 0;
     transition: opacity 200ms ease-in-out;
     transform: translateX(-50%);
+}
+.online-card-image .play-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
+}
+.online-card-image .play-btn .play-btn-icon {
+    font-size: var(--xl-size);
+    color: white;
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
+}
+.online-card-image .play-btn .watch-now {
+    font-size: var(--m-size);
+    margin-top: 0.5rem;
+    color: var(--primary-color);
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
+}
+.hover-state:hover .online-card-image.card-bg::after,.hover-state:hover .play-btn,.hover-state:hover .play-btn-icon,.hover-state:hover .watch-now {
+    opacity: 1;
+} 
+.online-card-text p {
+    font-size: var(--m-size);
+    color: var(--secondary-color);
+    font-weight: 500;
+    margin-top: 1.5rem;
+}
+
+/* ONLINE SECTION ENDS */
+
+/* PLAY SECTION STARTS */
+.play-content {
+    width: 70%;
+}
+
+.play-text {
+    max-width: 22.0625rem;
+    text-align: center;
+    margin-bottom: 4.625rem;
+}
+
+.play-text h1 {
+    font-size: var(--xm-size);
+    margin-bottom: 2.625rem;
+}
+
+.play-text p {
+    font-size: var(--s-size);
+    color: var(--secondary-color);
+    font-weight: 400;
+}
+
+.play-image {
+    position: relative;
+}
+
+.play-image-absolute {
+    position: absolute;
+    left: 0;
+    bottom: -39px;
+    transform: translateX(-55px);
+    background: url(../images/Rectangle66.png);
+    background-repeat: no-repeat;
+    max-width: 9.313rem;
+    max-height: 9.25rem;
+}
+
+/* PLAY SECTION ENDS */
+
+/* CATEGORY SECTION STARTS */
+.category {
+    margin: 10rem 0 7.5rem;
+}
+
+.category .container>.row {
+    gap: 1.5625rem;
+}
+
+.category-item {
+    padding: 0.625rem;
+    border: 2px solid transparent;
+    border-radius: 3.125rem;
+    transition: all 150ms ease-in-out;
+}
+
+.category-item p {
+    font-size: var(--m-size);
+    color: var(--quaternary-color);
+    font-weight: 600;
+    padding-left: 1rem;
+    padding-right: 0.625rem;
+    transition: color 150ms ease-in-out;
+}
+
+.category-item:hover {
+    border-color: var(--primary-color);
+}
+
+.category-item:hover p {
+    color: var(--primary-color);
+}
+
+/* CATEGORY SECTION ENDS */
+
+/* FOOTER SECTION STARTS */
+.footer {
+    background-color: var(--quaternary-color);
+    padding: 7.5rem 0 8.125rem;
+}
+.footer-logo-image {
+    margin-right: 1.25rem;
+}
+
+.footer-logo-image img {
+    vertical-align: middle;
+}
+.footer-logo-text p {
+    font-size: var(--logo-size);
+    color: white;
+    font-weight: 700;
+}
+.footer-logo-text p span {
+    color: var(--primary-color);
+}
+.footer-links {
+    margin: 2.3125rem 0 5rem;
+    /* margin: 4.0625rem 0; */
+}
+.footer-links ul li {
+    padding: 1.875rem;
+}
+
+.footer-links ul li a {
+    font-size: var(--s-size);
+    color: white;
+    font-weight: 600;
+}
+
+.footer-social {
+    margin-bottom: 4.625rem;
+}
+.footer-social ul li {
+    padding: 2.125rem;
+}
+
+.footer-social ul li a {
+    font-size: 2.5rem;
+    color: white;
+}
+.footer-rules ul li {
+    padding: 1.875rem;
+}
+
+.footer-rules ul li a {
+    font-size: var(--xs-size);
+    color: var(--foot-color);
+    font-weight: 500;
+}
+
+.footer-copyright {
+    margin-top: 2.75rem;
+}
+
+.footer-copyright p {
+    font-size: var(--xs-size);
+    color: var(--foot-color);
+    font-weight: 500;
+}
+
+.footer-copyright p span {
+    display: block;
+}
+
+/* FOOTER SECTION ENDS */
+
+/* RESPONSOVE MEDIA QUERIES */
+@media screen and (min-width: 768px) {
+    .banner .banner-content .banner-image {
+        margin: 0;
+    }
+    .gamer-text h1 {
+        font-size: var(--xm-size);
+    }
+    .banner-btn .btn-1 {
+        margin-right: 1.5rem;
+    }
+    .play-content {
+        width: 55%;
+    }
+    .play-image-absolute {
+        bottom: -60px;
+        transform: translateX(-92px);
+        background: url(../images/Rectangle66.png);
+        background-repeat: no-repeat;
+        max-width: 13.313rem;
+        max-height: 13.25rem;
+    }
+    .online-card {
+        width: 37%;
+    }
+    .online-card-image.card-bg::after {
+        top: 4px;
+        width: 98%;
+        height: 97%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .header {
+        padding: 2.3125rem 0;
+    }
+    .header .container>.row {
+        justify-content: space-between;
+    }
+    .header nav .nav,
+    .header .container>.row {
+        flex-direction: row;
+    }
+    .header nav .nav .nav-item {
+        margin-right: 2rem;
+        margin-top: 0 !important;
+    }
+    .header .header-logo,
+    .header nav .nav .nav-social,
+    .banner .banner-content .banner-image,
+    .banner .banner-content .banner-content-text,
+    .footer-copyright {
+        margin: 0;
+    }
+    .banner {
+        background: linear-gradient(#8C57EE0D, #F144AE0D);
+    }
+    .banner .banner-content h2,
+    .gamer-text h2,
+    .online-header h1,
+    .play-text h1 {
+        font-size: var(--xl-size);
+    }
+    .banner .banner-content h1 {
+        font-size: var(--xxl-size);
+    }
+    .banner .banner-content {
+        width: 50%;
+    }
+    .banner .banner-content>.row {
+        justify-content: flex-start;
+    }
+    .gamer {
+        margin-top: 3.4375rem;
+    }
+    .container {
+        padding: 0;
+    }
+    .banner .container>.row {
+        justify-content: flex-start;
+        flex-direction: row;
+    }
+    .gamer-text p {
+        margin: 1.5rem 0 2rem;
+    }
+
+    .gamer-btn {
+        margin-bottom: 1.5rem;
+    }
+    .gamer-text h1 {
+        font-size: var(--l-size);
+    }
+    .online {
+        margin: 7.5rem 0;
+    }
+    .online-card {
+        text-align: start;
+        width: 25%;
+    }
+    .play-content {
+        width: 50%;
+    }
+    .play-text {
+        text-align: right;
+    }
+    .footer-copyright p span {
+        display: inline;
+    }
+    .footer-links {
+        margin: 2.375rem 0;
+    }
+    .footer-social {
+        margin-bottom: 2.125rem;
+    }
+    .footer-social ul li {
+        padding: 2.5rem;
+    }
+    .online-card-image.card-bg::after {
+        top: 4px;
+        left: 3px;
+        width: 98%;
+        height: 97%;
+        transform: none;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .gamer .gamer-content {
+        width: 50%;
+    }
+    .gamer-text {
+        width: 32%;
+        text-align: right;
+        margin: 0;
+    }
+    .play-image-absolute {
+        transform: translateX(-117px);
+        max-width: 15.938rem;
+        max-height: 18.875rem;
+    }
+}
+@media screen and (min-width: 1405px) {
+    .online .container>.row {
+        gap: 2.375rem;
+    }
+    .online-card {
+        text-align: start;
+        width: 23%;
+    }
 }
